Update news section

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                             <div class="hero-slides-content text-center">
                                 <!-- <h6 data-animation="fadeInUp" data-delay="100ms">Latest album</h6> -->
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-<!--                                <a data-animation="fadeInUp" data-delay="500ms" href="#" class="btn oneMusic-btn mt-50">Discover <i class="fa fa-angle-double-right"></i></a>-->
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">Addictions - Out now! <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
+<!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,22 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
                     <div class="ablums-text text-center mb-70">
-                        <p>Borer Treetops are working on something stunning!</p>
+                        <p>Borer Treetops' first single, Addictions, is out on most streaming platforms!</p>
+                        <p>Check it out:</p>
+                        <p>
+                            <a href="https://open.spotify.com/track/78u6lljQQf3bjb4Pac4DU5?si=W7dHTFhkTlaZ5TCrpGm6iA" title="Addictions - Spotify" target="_blank">
+                                <i class="fa fa-spotify"></i>
+                            </a>&nbsp;
+                            <a href="https://music.apple.com/it/album/addictions-single/1549188548?l=en" title="Addictions - Apple Music" target="_blank">
+                                <i class="fa fa-apple"></i>
+                            </a>&nbsp;
+                            <a href="https://borertreetops.bandcamp.com/track/addictions" title="Addictions - Bandcamp" target="_blank">
+                                <i class="fa fa-bandcamp"></i>
+                            </a>&nbsp;
+                            <a href="https://www.youtube.com/watch?v=VhyV4zXoh5I" title="Addictions - YouTube" target="_blank">
+                                <i class="fa fa-youtube"></i>
+                            </a>
+                        </p>
                         <p>Follow us on social media to get the latest news.</p>
                         <p>
                             <a href="https://www.facebook.com/borertreetops" title="Borer Treetops - Facebook" target="_blank">
