Update news section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <div class="hero-slides-content text-center">
                                 <!-- <h6 data-animation="fadeInUp" data-delay="100ms">Latest album</h6> -->
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">Addictions - Out now! <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">Loud Silence - Out now! <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -174,19 +174,21 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
                     <div class="ablums-text text-center mb-70">
-                        <p>Borer Treetops' first single, Addictions, is out on most streaming platforms!</p>
+                        <p>The wait is finally over!
+                            Our first full-length album, Loud Silence, is now available on all major streaming platforms!<br>
+                            We put so much love and passion into it, and we're very proud of this work. Hope you'll like it too!</p>
                         <p>Check it out:</p>
                         <p>
-                            <a href="https://open.spotify.com/track/78u6lljQQf3bjb4Pac4DU5?si=W7dHTFhkTlaZ5TCrpGm6iA" title="Addictions - Spotify" target="_blank">
+                            <a href="https://open.spotify.com/album/7FwlwjJbF9t4g6ZiE23oVD?si=fXg38i24T32fLqYhj9yEtg" title="Loud Silence - Spotify" target="_blank">
                                 <i class="fa fa-spotify"></i>
                             </a>&nbsp;
-                            <a href="https://music.apple.com/it/album/addictions-single/1549188548?l=en" title="Addictions - Apple Music" target="_blank">
+                            <a href="https://music.apple.com/it/album/loud-silence/1555817700?l=en" title="Loud Silence - Apple Music" target="_blank">
                                 <i class="fa fa-apple"></i>
                             </a>&nbsp;
-                            <a href="https://borertreetops.bandcamp.com/track/addictions" title="Addictions - Bandcamp" target="_blank">
+                            <a href="https://borertreetops.bandcamp.com/album/loud-silence" title="Loud Silence - Bandcamp" target="_blank">
                                 <i class="fa fa-bandcamp"></i>
                             </a>&nbsp;
-                            <a href="https://www.youtube.com/watch?v=VhyV4zXoh5I" title="Addictions - YouTube" target="_blank">
+                            <a href="https://youtube.com/playlist?list=OLAK5uy_ldhtzzI20s8-ZHi0WPHK83R7s-Vdk_hJk" title="Loud Silence - YouTube" target="_blank">
                                 <i class="fa fa-youtube"></i>
                             </a>
                         </p>
