Add Spotify embedded player

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                             Our first full-length album, Loud Silence, is now available on all major streaming platforms!<br>
                             We put so much love and passion into it, and we're very proud of this work. Hope you'll like it too!</p>
                         <p>Check it out:</p>
+                        <iframe src="https://open.spotify.com/embed/album/7FwlwjJbF9t4g6ZiE23oVD" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                         <p>
                             <a href="https://open.spotify.com/album/7FwlwjJbF9t4g6ZiE23oVD?si=fXg38i24T32fLqYhj9yEtg" title="Loud Silence - Spotify" target="_blank">
                                 <i class="fa fa-spotify"></i>
