--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                                         <!-- </ul> -->
                                     <!-- </li> -->
 <!--                                    <li><a href="event.html">Events</a></li>-->
+                                    <li><a href="#about">About</a></li>
                                     <li><a href="#news">News</a></li>
                                     <li><a href="#contact">Contact</a></li>
                                 </ul>
@@ -159,6 +160,42 @@
         </div>
     </section>
     <!-- ##### Hero Area End ##### -->
+
+    <!-- ##### Featured Artist Area Start ##### -->
+    <section id="about" class="featured-artist-area section-padding-100 bg-img bg-overlay bg-fixed" style="background-image: url(img/core-img/treetops_studio.jpg);">
+        <div class="container">
+            <div class="row align-items-end">
+                <div class="col-12 col-md-5 col-lg-4">
+                    <div class="featured-artist-thumb">
+                        <img src="img/core-img/logo_square_min.jpg" alt="Borer Treetops">
+                    </div>
+                </div>
+                <div class="col-12 col-md-7 col-lg-8">
+                    <div class="featured-artist-content">
+                        <!-- Section Heading -->
+                        <div class="section-heading white text-left mb-30">
+<!--                            <p>See what’s new</p>-->
+                            <h2>Borer Treetops</h2>
+                        </div>
+                        <p>Borer Treetops is an electro-dream pop project from Cambridge, UK. <br>
+                            Borer Treetops take great inspiration from both old-school and modern psychedelic music,
+                            with a bit of electronic touches as well as pop and indie references. Spacey and dreamy
+                            music blends with intimate lyrics, focusing on how to deal with feelings and the
+                            difficulties of communicating them properly.</p>
+                        <div class="song-play-area">
+                            <div class="song-name">
+                                <p>02. Addictions</p>
+                            </div>
+                            <audio preload="auto" controls>
+                                <source src="audio/02 - Addictions.mp3">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ##### Featured Artist Area End ##### -->
 
     <!-- ##### Latest Albums Area Start ##### -->
     <section id="news" class="latest-albums-area section-padding-100">
@@ -537,38 +574,6 @@
 <!--        </div>-->
 <!--    </section>-->
     <!-- ##### Buy Now Area End ##### -->
-
-    <!-- ##### Featured Artist Area Start ##### -->
-<!--    <section class="featured-artist-area section-padding-100 bg-img bg-overlay bg-fixed" style="background-image: url(img/bg-img/bg-4.jpg);">-->
-<!--        <div class="container">-->
-<!--            <div class="row align-items-end">-->
-<!--                <div class="col-12 col-md-5 col-lg-4">-->
-<!--                    <div class="featured-artist-thumb">-->
-<!--                        <img src="img/bg-img/fa.jpg" alt="">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="col-12 col-md-7 col-lg-8">-->
-<!--                    <div class="featured-artist-content">-->
-<!--                        &lt;!&ndash; Section Heading &ndash;&gt;-->
-<!--                        <div class="section-heading white text-left mb-30">-->
-<!--                            <p>See what’s new</p>-->
-<!--                            <h2>Buy What’s New</h2>-->
-<!--                        </div>-->
-<!--                        <p>Nam tristique ex vel magna tincidunt, ut porta nisl finibus. Vivamus eu dolor eu quam varius rutrum. Fusce nec justo id sem aliquam fringilla nec non lacus. Suspendisse eget lobortis nisi, ac cursus odio. Vivamus nibh velit, rutrum at ipsum ac, dignissim iaculis ante. Donec in velit non elit pulvinar pellentesque et non eros.</p>-->
-<!--                        <div class="song-play-area">-->
-<!--                            <div class="song-name">-->
-<!--                                <p>01. Main Hit Song</p>-->
-<!--                            </div>-->
-<!--                            <audio preload="auto" controls>-->
-<!--                                <source src="audio/dummy-audio.mp3">-->
-<!--                            </audio>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-    <!-- ##### Featured Artist Area End ##### -->
 
     <!-- ##### Miscellaneous Area Start ##### -->
 <!--    <section class="miscellaneous-area section-padding-100-0">-->
