--- a/index.html
+++ b/index.html
@@ -12,10 +12,36 @@
     <title>Borer Treetops</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon_e.png">
+    <link rel="icon" href="img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="img/favicons/site.webmanifest">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#000000">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
+
+    <meta name="description" content="Borer Treetops is an electro-dream pop project from Cambridge, UK.">
+    <meta property="og:title" content="Borer Treetops">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Borer Treetops is an electro-dream pop project from Cambridge, UK.">
+    <meta property="og:url" content="https://borertreetops.com">
+    <meta property="og:site_name" content="Borer Treetops">
+    <meta property="og:image" content="https://borertreetops/img/core-img/logo_square_min.jpg">
+
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "Borer Treetops",
+            "description": "Borer Treetops is an electro-dream pop project from Cambridge, UK.",
+            "url": "https://borertreetops.com",
+            "image": "https://borertreetops.com/img/core-img/logo_square_min.jpg"
+        }
+    </script>
 
 </head>
 
