Add news about new single

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <div class="hero-slides-content text-center">
                                 <!-- <h6 data-animation="fadeInUp" data-delay="100ms">Latest album</h6> -->
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">Loud Silence - Out now! <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">New single - Out Nov 12! <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -237,6 +237,11 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
                     <div class="ablums-text text-center mb-70">
+                        <p>Borer Treetops' new single will be out on November 12<sup>th</sup>!<br>
+                            Keep an eye on our social media for updates.</p>
+                        <br>
+                        <hr>
+                        <br>
                         <p>The wait is finally over!
                             Our first full-length album, Loud Silence, is now available on all major streaming platforms!<br>
                             We put so much love and passion into it, and we're very proud of this work. Hope you'll like it too!</p>
