Update with new single

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <div class="hero-slides-content text-center">
                                 <!-- <h6 data-animation="fadeInUp" data-delay="100ms">Latest album</h6> -->
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">New single – 484 – Out now! <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">New single – Circles – Out now! <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -210,10 +210,10 @@
                             difficulties of communicating them properly.</p>
                         <div class="song-play-area">
                             <div class="song-name">
-                                <p>Borer Treetops - 484</p>
+                                <p>Borer Treetops - Circles</p>
                             </div>
                             <audio preload="auto" controls>
-                                <source src="audio/09 - 484.mp3">
+                                <source src="audio/03 - Circles.mp3">
                             </audio>
                         </div>
                     </div>
@@ -237,6 +237,13 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
                     <div class="ablums-text text-center mb-70">
+                        <p>Another one's out!<br>
+                            Please welcome Circles, our new single, now available on most streaming services</p>
+                        <p>Check it out:</p>
+                        <iframe src="https://open.spotify.com/embed/track/30W3w8jNy83mJRQqOihROW?utm_source=generator" width="100%" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                        <br>
+                        <hr>
+                        <br>
                         <p>Borer Treetops' new single "484" is finally out!<br>
                             Available on most digital platforms. Enjoy!</p>
                         <p>Check it out:</p>
