--- a/index.html
+++ b/index.html
@@ -240,14 +240,14 @@
                         <p>Another one's out!<br>
                             Please welcome Circles, our new single, now available on most streaming services</p>
                         <p>Check it out:</p>
-                        <iframe src="https://open.spotify.com/embed/album/3XAHtdAyZEVvCJPLKBnq1x" width="100%" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                        <iframe src="https://open.spotify.com/embed/album/3XAHtdAyZEVvCJPLKBnq1x" width="600" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                         <br>
                         <hr>
                         <br>
                         <p>Borer Treetops' new single "484" is finally out!<br>
                             Available on most digital platforms. Enjoy!</p>
                         <p>Check it out:</p>
-                        <iframe src="https://open.spotify.com/embed/album/3BdMhYw7OGbI9dM2GgY3Dz" width="100%" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                        <iframe src="https://open.spotify.com/embed/album/3BdMhYw7OGbI9dM2GgY3Dz" width="600" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                         <br>
                         <hr>
                         <br>
