Fix Spotify embed width and styles

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                         Please welcome Circles, our new single, now available on most streaming services.</p>
                                     <br>
                                     <div class="text-center">
-                                        <iframe src="https://open.spotify.com/embed/album/3XAHtdAyZEVvCJPLKBnq1x" width="600" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                                        <iframe src="https://open.spotify.com/embed/album/3XAHtdAyZEVvCJPLKBnq1x" width="100%" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                                         <p>
                                             <a href="https://open.spotify.com/album/3XAHtdAyZEVvCJPLKBnq1x" title="Circles - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
@@ -300,7 +300,7 @@
                                         Available on most digital platforms. Enjoy!</p>
                                     <br>
                                     <div class="text-center">
-                                        <iframe src="https://open.spotify.com/embed/album/3BdMhYw7OGbI9dM2GgY3Dz" width="600" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                                        <iframe src="https://open.spotify.com/embed/album/3BdMhYw7OGbI9dM2GgY3Dz" width="100%" height="160" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                                         <p>
                                             <a href="https://open.spotify.com/album/3BdMhYw7OGbI9dM2GgY3Dz" title="484 - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
@@ -343,7 +343,7 @@
                                         We put so much love and passion into it, and we're very proud of this work. Hope you'll like it too!</p>
                                     <br>
                                     <div class="text-center">
-                                        <iframe src="https://open.spotify.com/embed/album/7FwlwjJbF9t4g6ZiE23oVD" width="600" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                        <iframe src="https://open.spotify.com/embed/album/7FwlwjJbF9t4g6ZiE23oVD" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                         <p>
                                             <a href="https://open.spotify.com/album/7FwlwjJbF9t4g6ZiE23oVD" title="Loud Silence - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
