Fix post date position and size

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <div class="col-12 col-lg-9">
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-100 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -281,7 +281,7 @@
                             </div>
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-100 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -323,7 +323,7 @@
                             </div>
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-100 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -413,7 +413,7 @@
                         <br>
                         <hr>
                         <br>
-                        <p>Follow us on social media to get the latest news.</p>
+                        <h5>Follow us on social media to get the latest news.</h5>
                         <p>
                             <a href="https://www.facebook.com/borertreetops" title="Borer Treetops - Facebook" target="_blank">
                                 <i class="fa fa-facebook"></i>
