--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">New single – Circles – Out now! <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">White Pearls – Out now! <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
