--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#news">News</a></li>
+                                    <li><a href="#reviews">Reviews</a></li>
                                     <li><a href="#contact">Contact</a></li>
                                 </ul>
                             </div>
@@ -397,6 +398,8 @@
                 </div>
             </div>
 
+            <p id="reviews"></p><br>
+
             <!-- ##### Reviews Area Start ##### -->
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-12">
@@ -521,6 +524,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <li><a href="index.html">Home</a></li>
                             <li><a href="#about">About</a></li>
                             <li><a href="#news">News</a></li>
+                            <li><a href="#reviews">Reviews</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
