Update fonts and logos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
     <link rel="manifest" href="img/favicons/site.webmanifest">
-    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#000000">
 
@@ -30,7 +29,7 @@
     <meta property="og:description" content="Borer Treetops is an electro-dream pop project from Cambridge, UK.">
     <meta property="og:url" content="https://borertreetops.com">
     <meta property="og:site_name" content="Borer Treetops">
-    <meta property="og:image" content="https://borertreetops/img/core-img/logo_square_min.jpg">
+    <meta property="og:image" content="https://borertreetops/img/core-img/logo_square_min.png">
 
     <script type="application/ld+json">
         {
@@ -39,7 +38,7 @@
             "name": "Borer Treetops",
             "description": "Borer Treetops is an electro-dream pop project from Cambridge, UK.",
             "url": "https://borertreetops.com",
-            "image": "https://borertreetops.com/img/core-img/logo_square_min.jpg"
+            "image": "https://borertreetops.com/img/core-img/logo_square_min.png"
         }
     </script>
 
@@ -142,7 +141,7 @@
             <div class="row align-items-end">
                 <div class="col-12 col-md-5 col-lg-4">
                     <div class="featured-artist-thumb">
-                        <img src="img/core-img/logo_square_min.jpg" alt="Borer Treetops">
+                        <img src="img/core-img/logo_square_min.png" alt="Borer Treetops">
                     </div>
                 </div>
                 <div class="col-12 col-md-7 col-lg-8">
