Update slideshow and fonts

--- a/index.html
+++ b/index.html
@@ -123,9 +123,63 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="#news" class="btn oneMusic-btn mt-50">White Pearls – Out now! <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/playlist/5kfyrZaLRCJxdvPJZXZYNl?si=4045209767c94a2b" target="_blank" class="btn oneMusic-btn mt-50">Work In Progress... <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Single Hero Slide -->
+            <div class="single-hero-slide d-flex align-items-center justify-content-center">
+                <!-- Slide Img -->
+                <div class="slide-img bg-img" style="background-image: url(img/core-img/BT_picture_1.jpg);"></div>
+                <!-- Slide Content -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="hero-slides-content text-center">
+                                <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/playlist/5kfyrZaLRCJxdvPJZXZYNl?si=4045209767c94a2b" target="_blank" class="btn oneMusic-btn mt-50">Work In Progress... <i class="fa fa-angle-double-right"></i></a>
+                                <br><br>
+                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Single Hero Slide -->
+            <div class="single-hero-slide d-flex align-items-center justify-content-center">
+                <!-- Slide Img -->
+                <div class="slide-img bg-img" style="background-image: url(img/core-img/BT_picture_2.jpg);"></div>
+                <!-- Slide Content -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="hero-slides-content text-center">
+                                <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/playlist/5kfyrZaLRCJxdvPJZXZYNl?si=4045209767c94a2b" target="_blank" class="btn oneMusic-btn mt-50">Work In Progress... <i class="fa fa-angle-double-right"></i></a>
+                                <br><br>
+                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Single Hero Slide -->
+            <div class="single-hero-slide d-flex align-items-center justify-content-center">
+                <!-- Slide Img -->
+                <div class="slide-img bg-img" style="background-image: url(img/core-img/BT_picture_3.jpg);"></div>
+                <!-- Slide Content -->
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="hero-slides-content text-center">
+                                <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/playlist/5kfyrZaLRCJxdvPJZXZYNl?si=4045209767c94a2b" target="_blank" class="btn oneMusic-btn mt-50">Work In Progress... <i class="fa fa-angle-double-right"></i></a>
+                                <br><br>
+                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
                         </div>
                     </div>
