Fix date position in posts and social icons

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <div class="col-12 col-lg-9">
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-60 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -284,7 +284,7 @@
                             </div>
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-60 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -326,7 +326,7 @@
                             </div>
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-60 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -368,7 +368,7 @@
                             </div>
 
                             <!-- Single Post Start -->
-                            <div class="single-blog-post mb-50 wow fadeInUp" data-wow-delay="100ms">
+                            <div class="single-blog-post mb-60 wow fadeInUp" data-wow-delay="100ms">
                                 <!-- Post Thumb -->
                                 <div class="blog-post-thumb mt-30">
                                     <!-- Post Date -->
@@ -496,9 +496,29 @@
                             <a href="https://www.facebook.com/borertreetops" title="Borer Treetops - Facebook" target="_blank">
                                 <i class="fa fa-facebook"></i>
                             </a>
-                            &nbsp;
+                            &nbsp;&nbsp;
                             <a href="https://www.instagram.com/borertreetops" title="Borer Treetops - Instagram" target="_blank">
                                 <i class="fa fa-instagram"></i>
+                            </a>
+                            &nbsp;&nbsp;
+                            <a href="https://www.youtube.com/@borertreetops" title="Borer Treetops - Youtube" target="_blank">
+                                <i class="fa fa-youtube"></i>
+                            </a>
+                            &nbsp;&nbsp;
+                            <a href="https://open.spotify.com/artist/5rXOzZ2sm1q8OQ6jm9vENi" title="Borer Treetops - Spotify" target="_blank">
+                                <i class="fa fa-spotify"></i>
+                            </a>
+                            &nbsp;&nbsp;
+                            <a href="https://soundcloud.com/borertreetops" title="Borer Treetops - Soundcloud" target="_blank">
+                                <i class="fa fa-soundcloud"></i>
+                            </a>
+                            &nbsp;&nbsp;
+                            <a href="https://borertreetops.bandcamp.com" title="Borer Treetops - Bandcamp" target="_blank">
+                                <i class="fa fa-bandcamp"></i>
+                            </a>
+                            &nbsp;&nbsp;
+                            <a href="https://music.apple.com/gb/artist/borer-treetops/1549176507" title="Borer Treetops - Apple Music" target="_blank">
+                                <i class="fa fa-apple"></i>
                             </a>
                         </p>
                     </div>
